--- a/index.html
+++ b/index.html
@@ -5,8 +5,7 @@
       <meta charset="UTF-8">
       <meta http-equiv="X-UA-Compatible" content="IE=edge">
       <meta name="viewport" content="width=device-width, initial-scale=1.0">
-      <link rel="stylesheet" href="./css/css.css">
-      <link rel="stylesheet" href="./icon/css/all.min.css">
+      <link rel="stylesheet" href="css.css">
       <title>Mon portfolio</title>
   </head>
   <body>
@@ -64,15 +63,15 @@
 
    <div class="part1" id="part1">
 
-     <img src="./image/lp.png" height="400" alt="">
-     <img src="./image/ko.png" height="200" id="okpng" alt="">
+     <img src="lp.png" height="400" alt="">
+     <img src="ko.png" height="200" id="okpng" alt="">
      <h2>Bienvenue <br>  <span> chez  </span>  <b>Group Gl3 SARL</b> </h2>
 
     <button type="button" name="button">commencer a visiter</button>
 
    </div>
    <div class="part2" id="part2">
-  <img src="./image/lm.png" alt="">
+  <img src="lm.png" alt="">
    </div>
    <div class="part3">
       <ul>
@@ -100,7 +99,7 @@
 
    <div class="part1">
       <div class="cadre" >
-            <img id="cadreimg" src="./image/14.png" alt="">
+            <img id="cadreimg" src="14.png" alt="">
       </div>
    </div>
 
@@ -149,7 +148,7 @@
     <div class="ligne1">
 
      <div class="item1">
-       <img src="./image/lp.png " alt="">
+       <img src="lp.png " alt="">
        <div class="titleinfo">
         <h2>ACER ASPIRE 5</h2>
         <h1>1000$</h1>
@@ -164,7 +163,7 @@
 
 
           <div class="item1">
-            <img src="./image/2.png" id="i2" height="300" alt="">
+            <img src="2.png" id="i2" height="300" alt="">
             <div class="titleinfo">
              <h2>ACER ASPIRE 5</h2>
              <h1>1000$</h1>
@@ -180,7 +179,7 @@
     <div class="ligne1">
 
      <div class="item1">
-       <img src="./image/4.png " alt="">
+       <img src="4.png " alt="">
        <div class="titleinfo">
         <h2>ACER ASPIRE 5</h2>
         <h1>1000$</h1>
@@ -193,7 +192,7 @@
      </div>
 
           <div class="item1">
-            <img src="./image/3.png" alt="">
+            <img src="3.png" alt="">
             <div class="titleinfo">
              <h2>ACER ASPIRE 5</h2>
              <h1>1000$</h1>
@@ -205,7 +204,7 @@
             </div>
           </div>
           <div class="item1">
-            <img src="./image/1.png" alt="">
+            <img src="1.png" alt="">
             <div class="titleinfo">
              <h2>ACER ASPIRE 5</h2>
              <h1>1000$</h1>
@@ -221,7 +220,7 @@
     <div class="ligne1">
 
      <div class="item1">
-       <img src="./image/kl.png" alt="">
+       <img src="kl.png" alt="">
        <div class="titleinfo">
         <h2>ACER ASPIRE 5</h2>
         <h1>1000$</h1>
@@ -234,7 +233,7 @@
      </div>
 
           <div class="item1">
-            <img src="./image/7.png" height="400" alt="">
+            <img src="7.png" height="400" alt="">
             <div class="titleinfo">
              <h2>ACER ASPIRE 5</h2>
              <h1>1000$</h1>
@@ -246,7 +245,7 @@
             </div>
           </div>
           <div class="item1">
-            <img src="./image/6.png" height="400" alt="">
+            <img src="6.png" height="400" alt="">
             <div class="titleinfo">
              <h2>ACER ASPIRE 5</h2>
              <h1>1000$</h1>
@@ -262,7 +261,7 @@
     <div class="ligne1">
 
      <div class="item1">
-       <img src="./image/10.png" alt="">
+       <img src="10.png" alt="">
        <div class="titleinfo">
         <h2>ACER ASPIRE 5</h2>
         <h1>1000$</h1>
@@ -275,7 +274,7 @@
      </div>
 
           <div class="item1">
-            <img src="./image/14.png" height="400" alt="">
+            <img src="14.png" height="400" alt="">
             <div class="titleinfo">
              <h2>ACER ASPIRE 5</h2>
              <h1>1000$</h1>
@@ -287,7 +286,7 @@
             </div>
           </div>
           <div class="item1">
-            <img src="./image/lm.png" height="300" alt="">
+            <img src="lm.png" height="300" alt="">
             <div class="titleinfo">
              <h2>ACER ASPIRE 5</h2>
              <h1>1000$</h1>
