--- a/index.html
+++ b/index.html
@@ -480,8 +480,8 @@
 
  </div>
  </footer>
-<script src="./script/scrollreveal.min.js"></script>
-<script src="./script/script.js"></script>
+<script src="scrollreveal.min.js"></script>
+<script src="script.js"></script>
 
 <script src="https://kit.fontawesome.com/3b9af339fb.js" crossorigin="anonymous"></script>
   </body>
