--- a/index.html
+++ b/index.html
@@ -401,7 +401,8 @@
  <i class="fas fa-arrow-left"></i>
  <div class="txt">
     <b>''</b>
-    <p> ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+    <p>
+      tjrs satisfait de la qualité des services tres rapides et de la bonne qualité des produits 
     </p>
 
  </div>
